2006-01-19  Andreas Schwab  <schwab@suse.de>
	reviewed by: plam

	* src/fcpat.c (FcStrNeededBytes):

	Fix for unaligned memory accesses.

2006-01-18  Mike Fabian  <mfabian@suse.de>
	reviewed by: plam
	
	* src/fcdir.c (FcDirScanConfig):

	Properly order the FcConfigAddFontDir and FcConfigNormalizeFontDir
	calls to avoid crashes.

2006-01-14  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcDirCacheConsume):

	Fix segfault when consuming zero-length caches in fc-cat
	(which has no config, so FcConfigAddFontDir shouldn't be called.)

2006-01-14  Patrick Lam  <plam@mit.edu>
	* fc-cache/fc-cache.c (scanDirs):
	* fontconfig/fontconfig.h:
	* src/fccache.c (FcGlobalCacheReadDir, FcGlobalCacheUpdate,
			 FcGlobalCacheSave, FcDirCacheUnlink, FcDirCacheOpen):
	* src/fccfg.c (FcConfigBuildFonts, FcConfigNormalizeFontDir):
	* src/fcdir.c (FcDirScanConfig):
	* src/fcint.h:
	
	Compare device numbers as well as inodes.
	Always normalize directory names before comparing them.

2006-01-11  Mike Fabian  <mfabian@suse.de>
	reviewed by: plam
	
	* fc-cat/fc-cat.c (FcCacheGlobalFileReadAndPrint):

	Allocate extra space for appended '/' in directory name.

2006-01-10  Patrick Lam  <plam@mit.edu>
	* src/fccache.c (FcDirCacheConsume, FcDirCacheOpen,
			 FcDirCacheValid, FcDirCacheHasCurrentArch,
			 FcDirCacheUnlink, FcDirCacheRead, FcDirCacheConsume):
	* fc-cache/fc-cache.c (main):

	Explicitly add font dirs to config.fontDirs even if they're empty.
	Set current config in fc-cache.c.
	Fix treatment of cache directory as read from cache file; don't
	use string equality to determine if we have the right file,
	use inode equality.

2006-01-09  Patrick Lam  <plam@mit.edu>
	* fc-cache/fc-cache.c (scanDirs):
	* fc-cat/fc-cat.c (FcCacheGlobalFileReadAndPrint, FcCacheFileRead):
	* src/fccache.c (FcGlobalCacheReadDir, FcCacheReadDirs, 
			 FcDirCacheRead, FcDirCacheConsume, FcDirCacheWrite):
	* src/fccfg.c (FcConfigNormalizeFontDir):
	* src/fcdir.c (FcDirScanConfig):
	* src/fcint.h:
